0.3.15:
- PAIZO Block updates:
--- Fixed the parsing of DR that was not a singular value, i.e. "5 / piercing or slashing" would throw a parsing error.

0.3.14:
- PAIZO Block updates:
--- Added support for the latest ecology changes in Starfinder v0.9.
--- Fixed Issue #20: Parser ignored attack damage rolls if it had no additional damage on top of the roll.

0.3.13:
- General updates:
--- Marked compatible with Foundry v0.7.9
- PAIZO Block updates:
--- Languages (and other traits that have custom fields) now correctly separate their entries using semicolon instead of comma.
--- Additional speed properties now parse correctly.

0.3.12:
- General updates:
--- Marked compatible with Foundry v0.7.5

0.3.11:
- General updates:
--- Weapons and equipment are now always proficient.
- PAIZO Block updates:
--- Added 'constant' as a supported keyword for spell-like abilities.
--- Spell-like abilities no longer mark in the spell name how many times per day it is allowed, and instead fill it into the uses field.

0.3.10:
- PAIZO Block updates:
--- Added 'constant' as a supported keyword for spell-like abilities.
--- Spell-like abilities no longer overwrite the spell activation cost, and instead mark in the spell name how many times per day it is allowed.
--- Fixing an item merging issue when the quantity is not defined.


0.3.9:
- General updates:
--- Added "Parse Statblock" button to the right-click context menu of an actor folder. The parsed NPC will appear in this folder.
--- Improved item matching, it no longer cares for case sensitivity while trying to find compendium entries.
--- Improved spell parsing by ignoring * in the names.
- VTTES support updates:
--- Added support to parse out resistances.
--- Added support to parse out immunities.
--- Added support to parse out weaknesses.
--- Added support to parse out damage reduction.
--- Added support to parse out spell resistance.