@@ -8,6 +8,9 @@ export class SBStatblockParser {
             return {success: false};
         }
 
+        // Sanitize input: Fix newlines to be of a single format
+        inputText = inputText.replace(/[\r\n]/g, "\n");
+
         let characterData = {
             actorData: actorData,
             items: [],
@@ -40,7 +43,7 @@ export class SBStatblockParser {
         let bHeroLabFile = SBUtils.stringContains(inputText, "Hero Lab", false);
 
         // Parse out name, certain key lines that we don't want to split by ;, and all elements ; deliminated
-        let splitNewlines = inputText.split(/[\r\n]+/);
+        let splitNewlines = inputText.split(/[\n]/g);
         let lineIndex = -1;
         splitNewlines.forEach(line => {
             lineIndex = lineIndex + 1;
