@@ -1,6 +1,7 @@
 0.3.15:
 - PAIZO Block updates:
 --- Fixed the parsing of DR that was not a singular value, i.e. "5 / piercing or slashing" would throw a parsing error.
+--- Sanitize input by getting rid of \r\n in favor of just \n for newline parsing. This should address cross-platform parsing surprises.
 
 0.3.14:
 - PAIZO Block updates:
